syntax = "proto3";
package archive.identity;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
// import "cosmos/base/query/v1beta1/pagination.proto";
import "archive/identity/params.proto";
// this line is used by starport scaffolding # 1

option go_package = "archive/x/identity/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/archive/identity/params";
  }
  // Queries a list of IdentityMembers items.
	rpc IdentityMembers(QueryIdentityMembersRequest) returns (QueryIdentityMembersResponse) {
		option (google.api.http).get = "/archive/identity/identity_members/{id}/{isPending}";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryIdentityMembersRequest {
  uint64 id = 1;
  bool isPending = 2;
}

message QueryIdentityMembersResponse {
}

// this line is used by starport scaffolding # 3
